results form working

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,11 +1,4 @@
-<h1>Flights#index</h1>
-<p>Find me in app/views/flights/index.html.erb</p>
-
-<% @airports.each do |f| %>
-  <%= f.name %> 
-  <%= f.code %> <br>
-<% end %> 
-
+<h1>Flight Search</h1>
 
 <h2>list of flights:</h2>
 <% @flights.each do |f| %>
@@ -14,33 +7,36 @@
   <%= f.arrival_airport.name %> <br>
   <%= f.start_time %> <br>
   <%= (f.duration/60).to_i %>hr <%= f.duration % 60 %> min <br> 
-
   </p>
 <% end %> 
 
-
-<%= form_with method: "get" do |form| %>
+<%= form_with(url: search_path, method: "get", local: true) do |form| %>
   <div>
-     <%= form.label :departure_airport_airport_id, "Arrival Airport" %>
-    <%= form.select :departure_airport_id, options_from_collection_for_select(@airports, :id, :code), { include_blank: "Select Departure Airport" } %>
+    <%= form.label :departure_airport_code, "Departure Airport" %>
+    <%= form.select :departure_airport_code, options_from_collection_for_select(@airports, :code, :name), { include_blank: "Select Departure Airport" } %>
   </div>
   <div>
-    <%= form.label :arrival_airport_id, "Arrival Airport" %>
-    <%= form.select :arrival_airport_id, options_from_collection_for_select(@airports, :id, :code), { include_blank: "Select Arrival Airport" } %>
+    <%= form.label :arrival_airport_code, "Arrival Airport" %>
+    <%= form.select :arrival_airport_code, options_from_collection_for_select(@airports, :code, :name), { include_blank: "Select Arrival Airport" } %>
   </div>
 
-   <div>
-    <%= form.label :start_time, "Departure Date" %>
-    <%= form.select :start_time, options_from_collection_for_select(@flights, :id, :start_time), { include_blank: "Select Departure Date" } %>
-  </div>
 
     <div>
     <%= form.label :passengers, "Number of Passengers" %>
     <%= form.select :passengers, options_for_select((1..8).to_a) %>
   </div>
-  <%= form.submit %>
+  <%= form.submit 'Search Flights' %>
 <% end %>
 
 
-<%= form%>
 
+<% if @search_results.any? %>
+  <% @search_results.each do |f| %>
+    <p>Departure Airport: <%= f.departure_airport.code %></p>
+    <p>Arrival Airport:<%= f.arrival_airport.code %></p>
+    <p>Start Time:<%= f.start_time %></p>
+    <p>Duration: <%= (f.duration/60).to_i %>hr <%= f.duration % 60 %> minutes</p>
+  <% end %>
+<% else %>
+  <p> No flights match your critera</p>
+<% end %>
