passengers param is updated and works with #new booking and #show booking

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -62,6 +62,7 @@
     
 
   <%= f.submit "Select Flight" %>
+    <input type="hidden" id="passenger_count" name="passenger_count" value="<%= params[:passengers] %>" />
   <% end %>
 
 
