--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,38 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <%= link_to "Book A Flight", root_path, class: "navbar-brand"%>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+      <% if user_signed_in? %>
+      <li class="nav-item active">
+        <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <%= link_to "Sign In", new_user_session_path %>
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <% end %>
+      
+      <li class="nav-item active">
+        <%= link_to "Your Profile", root_path %>
+      </li>
+  
+    
+    </ul>
+  
+  </div>
+</nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    
+
     <%= yield %>
     
   </body>
