--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,11 @@
       <li class="nav-item active">
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
       </li>
+
+       <li class="nav-item active">
+        <%= link_to "Your Profile", user_path(current_user) %>
+      </li>
+
       <% else %>
       <li class="nav-item">
         <%= link_to "Sign In", new_user_session_path %>
@@ -32,9 +37,7 @@
       </li>
       <% end %>
       
-      <li class="nav-item active">
-        <%= link_to "Your Profile", root_path %>
-      </li>
+     
   
     
     </ul>
