--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       </li>
 
        <li class="nav-item active">
-        <%= link_to "Your Profile", user_path(current_user) %>
+        <%= link_to "#{current_user.name}'s Profile", user_path(current_user) %>
       </li>
 
       <% else %>
